[gd_scene load_steps=6 format=3 uid="uid://dynlg1hd3ux7b"]

[ext_resource type="FontFile" uid="uid://bmx1tfn475lnb" path="res://sticky_notes/handwriting_fonts/grape_nuts/GrapeNuts-Regular.ttf" id="1_4ori7"]
[ext_resource type="Script" path="res://sticky_notes/sticky_note.gd" id="1_a4ass"]
[ext_resource type="Texture2D" uid="uid://c3cvljqny485t" path="res://sticky_notes/close.png" id="2_4f0r0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n677i"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snlo7"]
bg_color = Color(1, 1, 1, 0)

[node name="Window" type="Window"]
size = Vector2i(200, 200)
unresizable = true
borderless = true
always_on_top = true
script = ExtResource("1_a4ass")

[node name="StickyNote" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_n677i")

[node name="MarginContainer" type="MarginContainer" parent="StickyNote"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="StickyNote/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="StickyNote/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="StickyNote/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="StickyNote/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_4f0r0")

[node name="TextEdit" type="TextEdit" parent="StickyNote/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_4ori7")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_snlo7")
wrap_mode = 1

[node name="Marker2D" type="Marker2D" parent="StickyNote"]
position = Vector2(28, 12)

[connection signal="button_down" from="StickyNote/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_top_bar_button_down"]
[connection signal="button_up" from="StickyNote/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_top_bar_button_up"]
[connection signal="pressed" from="StickyNote/MarginContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="close"]
